# Advanced_Architecture

./: .gitignore  README.md
Smooth/: 512f95ab_16061.dyn  Makefile  Makefile~  Mesh.hpp  SVD2x2.cpp  Smooth.hpp  install.sh  opt.txt  pgopti.dpi  pgopti.spi
Smooth_1/: Makefile  SVD2x2.cpp  test.txt
Smooth_org/: Makefile  Makefile~
Smooth_rb/: CMakeLists.txt  SmoothConfig.hpp.in  architecture.sublime-project  architecture.sublime-workspace
Smooth_rb/CMake/Compiler/: Compiler.cmake  Compiler.cmake~
Smooth_rb/CMake/cpp11/: CheckCXX11Features.cmake  c++11-test-static_assert-N1720_fail_compile.cpp
Smooth_rb/CMake/libs/: blitz.cmake
Smooth_rb/blitz-0.10/: Makefile  blitz-uninstalled.pc  config.status  libtool
Smooth_rb/blitz-0.10/benchmarks/: Makefile  plot_benchmarks.m
Smooth_rb/blitz-0.10/blitz/: Makefile  config.h
Smooth_rb/blitz-0.10/blitz/array/: Makefile
Smooth_rb/blitz-0.10/blitz/generate/: Makefile
Smooth_rb/blitz-0.10/blitz/intel/: bzconfig.h
Smooth_rb/blitz-0.10/blitz/meta/: Makefile
Smooth_rb/blitz-0.10/doc/: Makefile
Smooth_rb/blitz-0.10/doc/doxygen/: Makefile
Smooth_rb/blitz-0.10/doc/examples/: Makefile
Smooth_rb/blitz-0.10/doc/stencils/: Makefile
Smooth_rb/blitz-0.10/examples/: Makefile
Smooth_rb/blitz-0.10/lib/: Makefile
Smooth_rb/blitz-0.10/lib/.deps/: globals.Plo
Smooth_rb/blitz-0.10/random/: Makefile
Smooth_rb/blitz-0.10/testsuite/: Makefile
Smooth_rb/doc/profiler/: loop_prof_1362633404.xml  loop_prof_1362633413.xml  loop_prof_1362633422.xml  loop_prof_1362633439.xml  loop_prof_1362633448.xml  loop_prof_funcs_1362633404.dump  loop_prof_funcs_1362633413.dump  loop_prof_funcs_1362633422.dump  loop_prof_funcs_1362633439.dump  loop_prof_funcs_1362633448.dump  loop_prof_loops_1362633404.dump  loop_prof_loops_1362633413.dump  loop_prof_loops_1362633422.dump  loop_prof_loops_1362633439.dump  loop_prof_loops_1362633448.dump
Smooth_rb/src/: ACA2-2013.cpp  Mesh.cpp  Mesh.hpp  SVD2x2.hpp  Smooth.cpp  Smooth.hpp  colorGraph.cpp  colorGraph.hpp  smooth_inner.draft
doc/profiling/: 51392de1_25433.dyn  51392dfe_25772.dyn  51392e90_27566.dyn  51392ea1_27765.dyn  51392eb7_28011.dyn  51392f29_28250.dyn
doc/report/: SelfArx.cls  commentary  egpubl.cls  implementation_against_time  plot_threads_against_efficiency  report.baktex  report.out  report.tex  report.toc  threads_against_efficiency
doc/report/data/: plot_implementation_against_time  plot_threads_against_time  threads_against_efficiency  threads_against_efficiency~  threads_against_time  threads_against_time~
